--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
-  "name": "course-1-2017",
+  "name": "BusinessTripApp",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/webpack-dev-server"
+    "start": "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
-    "eslint": "^4.7.2",
+    "eslint": "^4.12.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "express": "3.0.0alpha4",
+    "firebase": "^4.7.0",
+    "nodemon": "^1.12.1",
+    "print-js": "^1.0.27",
+    "sequelize": "^4.23.4",
+    "sequelize-cli": "^3.1.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
