--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "express": "3.0.0alpha4",
     "firebase": "^4.7.0",
+    "moment": "^2.19.4",
     "nodemon": "^1.12.1",
     "print-js": "^1.0.27",
     "sequelize": "^4.23.4",
